// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton component Component with all props matches snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#757575",
          "borderRadius": 10,
          "borderWidth": 1,
          "height": 20,
          "justifyContent": "center",
          "marginRight": 40,
          "width": 20,
        },
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "black",
        },
      ]
    }
  >
    <Text
      color="black"
      size="md"
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "textDecorationColor": "black",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
          },
        ]
      }
      testID="sommelier-typography"
    >
      abc
    </Text>
  </Text>
</View>
`;

exports[`RadioButton component Component with only necessary props matches snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#A22841",
          "borderColor": "#A22841",
          "borderRadius": 10,
          "height": 20,
          "justifyContent": "center",
          "marginRight": 40,
          "width": 20,
        },
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "black",
        },
      ]
    }
  >
    
  </Text>
</View>
`;
